[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"
description = "A load-balancing, health-checking, hot-reloading reverse proxy"

[lib]
name = "reverse_proxy"
path = "src/lib.rs"

[[bin]]
name = "reverse-proxy"
path = "src/main.rs"

[[bin]]
name = "mock-backend"
path = "src/bin/mock_backend.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "=4.5.20", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
indexmap = "=2.2.6"

[dev-dependencies]

